<resources>

    <string name="app_name">HomeActivity01</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="home">首页</string>
    <string name="clock">闹钟</string>
    <string name="clocktime">时钟</string>
    <string name="remind">健康提醒</string>
    <string name="information">健康咨询</string>
    <string name="more">更多</string>
    <string name="textup">距离闹钟还有</string>
    <string name="textdown">一小时59分</string>
    <string name="norepeat">无重复</string>
    <string name="shijian">12:59</string>
    <string name="center">居中</string>
    <string name="stopwtch">秒表</string>
    <string name="timer">计时器</string>
    <string name="worldtime">世界时</string>
    <string name="title_activity_instance_of">InstanceOf</string>
    <string name="clockringtones">闹钟响铃</string>
    <string name="ringcycle">响铃周期</string>
    <string name="date">日期</string>
    <string name="dietremind">饮食提醒</string>
    <string name="movement_remind">运动提醒</string>
    <string name="medicine_remind">医药提醒</string>
    <string name="close">关闭</string>
    <string name="editor">编辑</string>
    <string name="delete">删除</string>
    <string name="skip">跳过</string>

</resources>