<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wood" >

    <ImageView
        android:id="@+id/solar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/solar_terms_view_0416" >
    </ImageView>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/solar" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <ImageView
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/alarm_1" />

            <TextView
                android:id="@+id/textup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/clock"
                android:text="@string/textup" />

            <TextView
                android:id="@+id/text_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textup"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/clock"
                android:text="@string/textdown" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Bottomborder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bottom_bg" >

        <Button
            android:id="@+id/a"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/home"
            android:text="@string/home" />

        <Button
            android:id="@+id/b"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/clock"
            android:text="@string/clock" />

        <Button
            android:id="@+id/c"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/remind"
            android:text="@string/remind" />

        <Button
            android:id="@+id/d"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/information"
            android:text="@string/information" />

        <Button
            android:id="@+id/e"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:drawableTop="@drawable/more"
            android:text="@string/more" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ll"
        android:background="@drawable/top_bar_shadow" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tl"
        android:background="@drawable/list_item" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/alarm" />

            <TextView
                android:id="@+id/textlift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/alarm"
                android:text="@string/clock" />

            <TextView
                android:id="@+id/text_wunp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textlift"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/alarm"
                android:text="@string/norepeat" />

            <ImageView
                android:id="@+id/tixing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/alarm_2" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>