<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_wood"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bar" >

        <ImageView
            android:id="@+id/home"
            android:layout_width="44dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/center"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="80dp"
            android:text="@string/dietremind"
            android:textColor="#000000" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/topbar"
        android:layout_marginTop="100dp"
        android:background="@drawable/list_item" />

    <LinearLayout
        android:id="@+id/Bottomborder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <LinearLayout
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/close" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="15dp"
                android:text="@string/close"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/a"
            android:layout_weight="1"
            android:background="@drawable/edit" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="15dp"
                android:text="@string/editor"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/b"
            android:layout_weight="1"
            android:background="@drawable/delete" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="15dp"
                android:text="@string/delete"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@id/c"
            android:layout_weight="1"
            android:background="@drawable/pass" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="15dp"
                android:text="@string/skip"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>